syntax = "proto3";
package chain4energy.c4echain.cfeminter;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/chain4energy/c4e-chain/x/cfeminter/types";

// HalvingMinter represents the inflation parameters.
message HalvingMinter {
  // the number of coins produced from the first block
  int64 new_coins_mint = 1;

  // expected blocks per year
  int64 blocks_per_year = 6;

  // type of coin to mint
  string mint_denom = 3;
}

message Minter {

  google.protobuf.Timestamp start = 1 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  repeated MintingPeriod periods = 2; 

}

message MintingPeriod {

  int32 ordering_id = 1; // TODO change name to position
  google.protobuf.Timestamp period_end = 2 [(gogoproto.stdtime) = true];
  enum MinterType {
    NO_MINTING = 0;
    TIME_LINEAR_MINTER = 1;
  }
  MinterType type = 3;
  TimeLinearMinter time_linear_minter = 4;

}

message TimeLinearMinter {
  string amount = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}

message MinterState {
  int32 current_ordering_id = 1;
  string amount_minted = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}